Integrated with api

--- a/index.html
+++ b/index.html
@@ -30,117 +30,8 @@
 </div>
 <div class="menu flex-column">
 	<span class="slide-exit exit right-exit">×</span>
-	<div class="music-list">
-		<div class="music-block" style="background-image: url('http://lh6.ggpht.com/fat3iCoisHVZAQ1_tjjj1LG6zFL0PQAWysydGrRaKlFSs9LO1JFOi7ByMvVbVCcNlAhdkuOFxg')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
-		<div class="music-block" style="background-image: url('http://lh3.googleusercontent.com/JgtrjcEpurjlOnUxN2BJ4AV-CcUJ7hGkbLzHclwy6NIM5Yjlj_SWxL1J60fEbJDxLV53JlwIHQ')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
-		<div class="music-block" style="background-image: url('http://lh6.ggpht.com/fat3iCoisHVZAQ1_tjjj1LG6zFL0PQAWysydGrRaKlFSs9LO1JFOi7ByMvVbVCcNlAhdkuOFxg')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
-		<div class="music-block" style="background-image: url('http://lh3.googleusercontent.com/JgtrjcEpurjlOnUxN2BJ4AV-CcUJ7hGkbLzHclwy6NIM5Yjlj_SWxL1J60fEbJDxLV53JlwIHQ')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
-		<div class="music-block" style="background-image: url('http://lh6.ggpht.com/fat3iCoisHVZAQ1_tjjj1LG6zFL0PQAWysydGrRaKlFSs9LO1JFOi7ByMvVbVCcNlAhdkuOFxg')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
-		<div class="music-block" style="background-image: url('http://lh3.googleusercontent.com/JgtrjcEpurjlOnUxN2BJ4AV-CcUJ7hGkbLzHclwy6NIM5Yjlj_SWxL1J60fEbJDxLV53JlwIHQ')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
-		<div class="music-block" style="background-image: url('http://lh6.ggpht.com/fat3iCoisHVZAQ1_tjjj1LG6zFL0PQAWysydGrRaKlFSs9LO1JFOi7ByMvVbVCcNlAhdkuOFxg')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
-		<div class="music-block" style="background-image: url('http://lh3.googleusercontent.com/JgtrjcEpurjlOnUxN2BJ4AV-CcUJ7hGkbLzHclwy6NIM5Yjlj_SWxL1J60fEbJDxLV53JlwIHQ')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
-		<div class="music-block" style="background-image: url('http://lh6.ggpht.com/fat3iCoisHVZAQ1_tjjj1LG6zFL0PQAWysydGrRaKlFSs9LO1JFOi7ByMvVbVCcNlAhdkuOFxg')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
-		<div class="music-block" style="background-image: url('http://lh3.googleusercontent.com/JgtrjcEpurjlOnUxN2BJ4AV-CcUJ7hGkbLzHclwy6NIM5Yjlj_SWxL1J60fEbJDxLV53JlwIHQ')">
-			<div class="music-wrapper">
-				<div class="img-block">
-					<img src="youtube.png" alt="" />
-				</div>
-				<div class="music-content">
-					<h1 class="title">Title</h1>
-					<p>Lorem ipsum</p>
-				</div>
-			</div>
-		</div>
+	<div id="music-list" class="music-list">
+
 	</div>
 </div>
 
@@ -148,8 +39,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 <script src="js/slide.min.js"></script>
-
-
+<script src="js/api.js"></script>
 <script src="js/main.js"></script>
 
 
