--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,14 @@
 
 <div class="wrapper">
 	<h1 class="logo flex-center-wrapper flex-row">Vimudo</h1>
-	<form class="flex-center-wrapper flex-row">
+	<form class="search-form flex-center-wrapper flex-row">
 		<div class="relative form-wrapper">
 			<input type="text" class="form-input search-input" placeholder="Find your music..." />
 			<button class="btn slide-toggle"><img src="search.svg" alt="search" /></button>
 		</div>
 	</form>
 </div>
-<div class="menu flex-column">
+<div class="menu flex-column" tabindex="-1">
 	<span class="slide-exit exit right-exit">×</span>
 	<div id="music-list" class="music-list">
 
@@ -37,7 +37,7 @@
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="public/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 <script src="js/slide.min.js"></script>
 <script src="js/api.js"></script>
 <script src="js/main.js"></script>
